added the traning page and fixed the proprem url

--- a/jisr_almaharat/www/Home/index.html
+++ b/jisr_almaharat/www/Home/index.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-          <img src="/assets/jisr_almaharat/site_assets/img/hero-img.png" class="img-fluid animated" alt="">
+          <img src="/assets/jisr_almaharat/site_assets/img/home1.avif" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -40,6 +40,12 @@
   {% include 'templates/includes/job/job_card.html' %}
   {% endblock %}
   <!-- Here show all Jobs -->
+
+  <!-- Here  Section Show all Training_card -->
+  {% block Training_card %}
+  {% include 'templates/includes/training/training_card.html' %}
+  {% endblock %}
+  <!-- Here show all Training_card -->
 
 </main>
 
