--- a/jisr_almaharat/www/Home/index.html
+++ b/jisr_almaharat/www/Home/index.html
@@ -14,9 +14,9 @@
             time,part time.contract and intership</p>
           <div class="d-flex flex-column flex-md-row" data-aos="fade-up" data-aos-delay="200">
             <a href="#recent-posts" class="btn-get-started">Get Started <i class="bi bi-arrow-right"></i></a>
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
+            <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
               class="glightbox btn-watch-video d-flex align-items-center justify-content-center ms-0 ms-md-4 mt-4 mt-md-0"><i
-                class="bi bi-play-circle"></i><span>Watch Videos</span></a>
+                class="bi bi-play-circle"></i><span>Watch Videos</span></a> -->
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out">
