Add: Organization Dashboard

--- a/jisr_almaharat/www/Home/training_details.html
+++ b/jisr_almaharat/www/Home/training_details.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 <div class="sticky-apply">
-    <a class="btn btn-primary py-3 px-5" href="/application/{{detail.name}}/Training">Apply Now</a>
+    <a class="btn btn-primary py-3 px-5" href="/appling/{{detail.name}}/Training">Apply Now</a>
 </div>
 
 
