--- a/jisr_almaharat/www/Home/more_job.html
+++ b/jisr_almaharat/www/Home/more_job.html
@@ -58,12 +58,12 @@
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <!-- ////////////////    JOb details  //////////////////////  -->
                             {% for job in Full_time %}
-                                {% if job.jop_type == 'Full-time' %}
+                                {% if job.jop_type == 'Full-time' and job.status == 'Available'%}
                                     <div class="job-item p-4 mb-4">
                                         <div class="row g-4">
                                             <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                                 <img class="flex-shrink-0 img-fluid border rounded"
-                                                    src="/assets/jisr_almaharat/site_assets/img/com-logo-3.jpg" alt="" style="width: 80px; height: 80px;">
+                                                    src="{% if job.image %}{{ job.image }}{% else %}/assets/jisr_almaharat/site_assets/img/blog/blog-1.jpg{% endif %}"  alt="" style="width: 80px; height: 80px;">
                                                 <div class="text-start ps-4">
                                                     <h5 class="mb-3">{{ job.jop_title }}</h5>
                                                     <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>
@@ -94,7 +94,7 @@
                                                         <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857z"/>
                                                         <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
                                                       </svg>
-                                                      From {{ job.posting_date }} To {{ job.aplication_deadline }}
+                                                      End at {{ job.aplication_deadline }}
                                                 </small>
                                             </div>
                                         </div>
@@ -113,7 +113,7 @@
                                         <div class="row g-4">
                                             <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                                 <img class="flex-shrink-0 img-fluid border rounded"
-                                                    src="/assets/jisr_almaharat/site_assets/img/com-logo-3.jpg" alt="" style="width: 80px; height: 80px;">
+                                                    src="{% if job.image %}{{ job.image }}{% else %}/assets/jisr_almaharat/site_assets/img/blog/blog-1.jpg{% endif %}"  alt="" style="width: 80px; height: 80px;">
                                                 <div class="text-start ps-4">
                                                     <h5 class="mb-3">{{ job.jop_title }}</h5>
                                                     <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>
@@ -144,7 +144,7 @@
                                                         <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857z"/>
                                                         <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
                                                       </svg>
-                                                      From {{ job.posting_date }} To {{ job.aplication_deadline }}
+                                                      End at {{ job.aplication_deadline }}
                                                 </small>
                                             </div>
                                         </div>
@@ -162,7 +162,7 @@
                                         <div class="row g-4">
                                             <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                                 <img class="flex-shrink-0 img-fluid border rounded"
-                                                    src="/assets/jisr_almaharat/site_assets/img/com-logo-3.jpg" alt="" style="width: 80px; height: 80px;">
+                                                    src="{% if job.image %}{{ job.image }}{% else %}/assets/jisr_almaharat/site_assets/img/blog/blog-1.jpg{% endif %}"  alt="" style="width: 80px; height: 80px;">
                                                 <div class="text-start ps-4">
                                                     <h5 class="mb-3">{{ job.jop_title }}</h5>
                                                     <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>
@@ -193,7 +193,7 @@
                                                         <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857z"/>
                                                         <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
                                                       </svg>
-                                                      From {{ job.posting_date }} To {{ job.aplication_deadline }}
+                                                      End at {{ job.aplication_deadline }}
                                                 </small>
                                             </div>
                                         </div>
