--- a/jisr_almaharat/www/Home/more_training.html
+++ b/jisr_almaharat/www/Home/more_training.html
@@ -51,12 +51,12 @@
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <!-- ////////////////    training details  //////////////////////  -->
                             {% for training in oline %}
-                                {% if training.training_pattren == 'Online' %}
+                                {% if training.training_pattren == 'Online' and training.training_status == 'Available' %}
                                     <div class="job-item p-4 mb-4">
                                         <div class="row g-4">
                                             <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                                 <img class="flex-shrink-0 img-fluid border rounded"
-                                                    src="/assets/jisr_almaharat/site_assets/img/com-logo-3.jpg" alt="" style="width: 80px; height: 80px;">
+                                                    src="{% if training.image %}{{ training.image }}{% else %}/assets/jisr_almaharat/site_assets/img/traininimg.jpg{% endif %}" alt="" style="width: 80px; height: 80px;">
                                                 <div class="text-start ps-4">
                                                     <h5 class="mb-3">{{ training.training_title }}</h5>
                                                     <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>
@@ -80,14 +80,14 @@
                                             <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                                 <div class="d-flex mb-3">
                                                     <!-- <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> -->
-                                                    <a class="btn btn-primary" href="/Home/training_details/{{training.training_title}}">Apply Now</a>
+                                                    <a class="btn btn-primary" href="/Home/training_details/{{training.name}}">Apply Now</a>
                                                 </div>
                                                 <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
                                                         <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857z"/>
                                                         <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
                                                       </svg>
-                                                      From {{ training.training_post_date }} To {{ training.aplication_deadline }}
+                                                      End at  {{ training.aplication_deadline }}
                                                 </small>
                                             </div>
                                         </div>
@@ -102,12 +102,12 @@
                         <div id="tab-2" class="tab-pane fade show p-0">
                             <!-- ////////////////    training details  //////////////////////  -->
                             {% for training in oline %}
-                                {% if training.training_pattren == 'Field' %}
+                                {% if training.training_pattren == 'Field' and training.training_status == 'Available' %}
                                     <div class="job-item p-4 mb-4">
                                         <div class="row g-4">
                                             <div class="col-sm-12 col-md-8 d-flex align-items-center">
                                                 <img class="flex-shrink-0 img-fluid border rounded"
-                                                    src="/assets/jisr_almaharat/site_assets/img/com-logo-3.jpg" alt="" style="width: 80px; height: 80px;">
+                                                    src="{% if training.image %}{{ training.image }}{% else %}/assets/jisr_almaharat/site_assets/img/traininimg.jpg{% endif %}" alt="" style="width: 80px; height: 80px;">
                                                 <div class="text-start ps-4">
                                                     <h5 class="mb-3">{{ training.training_title }}</h5>
                                                     <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>
@@ -131,14 +131,14 @@
                                             <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                                 <div class="d-flex mb-3">
                                                     <!-- <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> -->
-                                                    <a class="btn btn-primary"  href="/Home/training_details/{{training.training_title}}">Apply Now</a>
+                                                    <a class="btn btn-primary"  href="/Home/training_details/{{training.name}}">Apply Now</a>
                                                 </div>
                                                 <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
                                                         <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857z"/>
                                                         <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
                                                       </svg>
-                                                      From {{ training.training_post_date }} To {{ training.aplication_deadline }}
+                                                      End at  {{ training.aplication_deadline }}
                                                 </small>
                                             </div>
                                         </div>
