fix: modify categorise

--- a/jisr_almaharat/www/Home/filter-categories/more_categoris_6.html
+++ b/jisr_almaharat/www/Home/filter-categories/more_categoris_6.html
@@ -61,7 +61,7 @@
                             <!-- ////////////////    JOb Categories //////////////////////  -->
                            
                             {% for job in Categories %}
-                                {% if job.job_categories == 'Marketing' %}
+                                {% if job.job_categories == 'Seals and comunication' %}
                      
                                     <div class="job-item p-4 mb-4">
                                         <div class="row g-4">
