--- a/jisr_almaharat/www/Home/more_job.html
+++ b/jisr_almaharat/www/Home/more_job.html
@@ -108,7 +108,7 @@
                         <div id="tab-2" class="tab-pane fade show p-0">
                             <!-- ////////////////    JOb details  //////////////////////  -->
                             {% for job in Full_time %}
-                                {% if job.jop_type == 'Part-time' %}
+                                {% if job.jop_type == 'Part-time' and job.status == 'Available'%}
                                     <div class="job-item p-4 mb-4">
                                         <div class="row g-4">
                                             <div class="col-sm-12 col-md-8 d-flex align-items-center">
@@ -157,7 +157,7 @@
                         <div id="tab-3" class="tab-pane fade show p-0">
                             <!-- ////////////////    JOb details  //////////////////////  -->
                             {% for job in Full_time %}
-                                {% if job.jop_type == 'Freelance' %}
+                            {% if job.jop_type == 'Freelance' and job.status == 'Available'%}
                                     <div class="job-item p-4 mb-4">
                                         <div class="row g-4">
                                             <div class="col-sm-12 col-md-8 d-flex align-items-center">
