--- a/jisr_almaharat/www/Home/training_details.html
+++ b/jisr_almaharat/www/Home/training_details.html
@@ -71,10 +71,12 @@
     </div>
 </div>
 <div class="sticky-apply">
+    {% set user_data = user_data %}
+    {% if 'User Role' in user_data.roles%}
     <a id="applyBtn" class="btn btn-primary py-3 px-5" href="/appling/{{detail.name}}/Training">Apply Now</a>
+    {% endif %}
     <!-- أزرار تسجيل الدخول والتسجيل -->
     <a id="loginBtn" class="btn btn-primary py-3 px-5" href="/login#login">LOGIN</a>
-    <a id="registerBtn" class="btn btn-primary py-3 px-5" href="/login#signup">Register</a>
 </div>
 
 
@@ -198,12 +200,10 @@
         if (loggedInUser) {
             // Hide the "Login" and "Register" button if user is logged in and show the "Profile" button
             if (loginButton) loginButton.style.display = "none";
-            if (registerButton) registerButton.style.display = "none";
             if (applyButton) applyButton.style.display = "inline";
         } else {
             // Show the "Login" and "Register" button if user is not logged in and hide the "Profile" button
             if (loginButton) loginButton.style.display = "inline";
-            if (registerButton) registerButton.style.display = "inline";
             if (applyButton) applyButton.style.display = "none";
         }
     })
