--- a/jisr_almaharat/www/choose-account-type.html
+++ b/jisr_almaharat/www/choose-account-type.html
@@ -41,7 +41,7 @@ function assignRole(userType) {
                    // window.location.href = r.message;
                    window.location.replace('/create-organization-acount'); 
                     else
-                    window.location.replace('/me'); 
+                    window.location.replace('/create-a-count'); 
                     }, 1000);
             }
         },
